make sure content doesn't overflow on IE11
SRFCMSAL-2237

--- a/source/_patterns/20-molecules/teaser/teaser.scss
+++ b/source/_patterns/20-molecules/teaser/teaser.scss
@@ -830,6 +830,8 @@
     flex-direction: column;
     justify-content: flex-end;
     flex: 1 1 auto;
+
+    width: 100%; // make sure content doesn't overflow on IE11
   }
 
   // necessary to have a translucent background (contrary to the default dark teaser)
